--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <main>
       <h1 id="title">Survey Form</h1>
-      <p id="description"></p>
+      <p id="description">Thank you for taking the time to help us improve the platform</p>
       <form id="survey-form" action="index.html" method="post">
         <label id="name-label" for="name">name</label>
         <input id="name" type="text" value="" required placeholder="enter your name">
@@ -37,6 +37,9 @@
         <input type="checkbox" value="fornt end prjects" >
         <label for="">backend projects</label>
         <input type="checkbox" value="backend projects">
+        <label for="comments">Any comments or suggestions?</label>
+        <textarea name="" id="comments" cols="30" rows="5"></textarea>
+        <button id="submit">Submit</button>
       </form>
     </main>
     <script  src="js/index.js"></script>
