--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <main>
+    <main id="main">
       <h1 id="title">Survey Form</h1>
       <p id="description">Thank you for taking the time to help us improve the platform</p>
       <form id="survey-form" action="index.html" method="post">
@@ -18,6 +18,7 @@
         <input id="email" type="email" value="" required placeholder="enter your email">
         <label id="number-label" for="number">age</label>
         <input id="number" type="number" value="" min="18" max="60" placeholder="enter your age">
+        <label for="choice">Would you recommend freeCodeCamp to a friend?</label>
         <Select id="dropdown">
           <option value="student">student</option>
           <option value="full time job">full time job</option>
@@ -25,18 +26,38 @@
         </Select>
         <label for="choice">Would you recommend freeCodeCamp to a friend?
 </label>
-        <label for="">deffintly</label>
-        <input type="radio" name="choice" value="deffintly">
-        <label for="">maybe</label>
-        <input type="radio" name="choice" value="maybe">
-        <label for="">not sure</label>
-        <input type="radio" name="choice" value="not sure">
-        <label for="">challanges</label>
-        <input type="checkbox" value="challanges">
-        <label for="">fornt end prjects</label>
-        <input type="checkbox" value="fornt end prjects" >
-        <label for="">backend projects</label>
-        <input type="checkbox" value="backend projects">
+        <div class="radio">
+
+          <label for="">deffintly</label>
+          <input type="radio" name="choice" value="deffintly">
+        </div>
+        <div class="radio">
+
+          <label for="">maybe</label>
+          <input type="radio" name="choice" value="maybe">
+        </div>
+        <div class="radio">
+
+          <label for="">not sure</label>
+          <input type="radio" name="choice" value="not sure">
+        </div>
+        <label id="choose" for=""> choose one from bellow</label>
+        <div class="checkbox">
+
+          <label for="">challanges</label>
+          <input type="checkbox" value="challanges">
+        </div>
+        <div class="checkbox">
+
+          <label for="">fornt end prjects</label>
+          <input type="checkbox" value="fornt end prjects" >
+        </div>
+        <div class="checkbox">
+
+          <label for="">backend projects</label>
+          <input type="checkbox" value="backend projects">
+        </div>
+
         <label for="comments">Any comments or suggestions?</label>
         <textarea name="" id="comments" cols="30" rows="5"></textarea>
         <button id="submit">Submit</button>
